Huiswerk Renske Smith-Nauta

--- a/opdracht-2/index.html
+++ b/opdracht-2/index.html
@@ -29,18 +29,18 @@
 
     <!--    OPDRACHT 2.3    -->
     <div class="three">
-        <ul>
+        <ul class="list">
             <li>Home</li>
             <li>Cursussen</li>
             <li>Content</li>
         </ul>
-        <div>Edhub</div>
+        <div class="list2">Edhub</div>
     </div>
 
     <hr />
 
     <!--    OPDRACHT 2.4    -->
-    <div>
+    <div class="green">
         <form>
             <label for="username">
                 Gebruikersnaam:
