--- a/opdracht-1/index.html
+++ b/opdracht-1/index.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
 
-        <img src="assets/header-image.jpg" alt="Tutti">
+        <img id="header" src="assets/header-image.jpg" alt="Tutti">
 
         <main>
             <h1>Latest Articles</h1>
@@ -51,7 +51,7 @@
             </div>
         </main>
 
-        <footer>
+        <footer class="copyright">
             <span>&copy;2020 Ciao Tutti Blog</span>
         </footer>
     </div>
